# barnstormer

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  scenarios.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml  release-gui.yml  release.yml
crates/barnstormer-agent/: Cargo.toml
crates/barnstormer-agent/src/: attachment_summarizer.rs  card_body_writer.rs  card_decomposer.rs  client.rs  context.rs  import.rs  lib.rs  narration_renderer.rs  spec_core_field_writer.rs  streaming_hook.rs  swarm.rs  testing.rs
crates/barnstormer-agent/src/mux_tools/: ask_user.rs  delegate_card_body.rs  delegate_card_decomposition.rs  delegate_spec_core_field.rs  emit_diff_summary.rs  emit_narration.rs  mod.rs  propose_transition.rs  read_state.rs  retrieve_context.rs  show_canvas.rs  write_commands.rs
crates/barnstormer-core/: Cargo.toml
crates/barnstormer-core/src/: actor.rs  card.rs  command.rs  event.rs  lib.rs  model.rs  state.rs  transcript.rs
crates/barnstormer-core/src/export/: dot.rs  markdown.rs  mod.rs  spec.rs  yaml.rs
crates/barnstormer-runtime/: Cargo.toml
crates/barnstormer-runtime/src/: config.rs  lib.rs  server.rs
crates/barnstormer-runtime/tests/: server_lifecycle.rs
crates/barnstormer-server/: Cargo.toml
crates/barnstormer-server/src/: app_state.rs  attachment_summarizer.rs  auth.rs  card_body_writer.rs  card_decomposer.rs  config.rs  context_storage.rs  lib.rs  narration_renderer.rs  providers.rs  routes.rs  spec_core_field_writer.rs  summarizer.rs  svg_raster.rs
crates/barnstormer-server/src/api/: commands.rs  import.rs  mod.rs  specs.rs  stream.rs
crates/barnstormer-server/src/web/: mod.rs
crates/barnstormer-server/tests/: context_delete.rs  context_download.rs  context_lifecycle.rs  context_notes.rs  context_preview.rs  context_resummarize.rs  context_summarize_failed_sse.rs  context_upload.rs  create_spec_with_files.rs  multimodal_smoke.rs
crates/barnstormer-server/tests/common/: mod.rs
crates/barnstormer-store/: Cargo.toml
crates/barnstormer-store/src/: jsonl.rs  lib.rs  manager.rs  recovery.rs  snapshot.rs  sqlite.rs
crates/barnstormer-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/barnstormer-tauri/capabilities/: default.json
crates/barnstormer-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
crates/barnstormer-tauri/ui/: index.html  settings.html  settings.js
crates/specd-agent/: Cargo.toml
crates/specd-agent/src/: client.rs  context.rs  lib.rs  runtime.rs  swarm.rs  testing.rs  tools.rs
crates/specd-agent/src/mux_tools/: ask_user.rs  emit_diff_summary.rs  emit_narration.rs  mod.rs  read_state.rs  write_commands.rs
crates/specd-agent/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/specd-core/: Cargo.toml
crates/specd-core/src/: actor.rs  card.rs  command.rs  event.rs  lib.rs  state.rs  transcript.rs
crates/specd-core/src/export/: dot.rs  markdown.rs  mod.rs  yaml.rs
crates/specd-server/: Cargo.toml
crates/specd-server/src/: app_state.rs  auth.rs  config.rs  lib.rs  providers.rs  routes.rs
crates/specd-server/src/api/: commands.rs  mod.rs  specs.rs  stream.rs
crates/specd-server/src/web/: mod.rs
crates/specd-store/: Cargo.toml
crates/specd-store/src/: jsonl.rs  lib.rs  manager.rs  recovery.rs  snapshot.rs  sqlite.rs
docs/: SPEC.md  SPEC_GAPS.md  barn-build.dot  build.dot  desktop-app.md  index.html  release-signing-secrets.md  spec.yaml
docs/audits/: AUDIT_REPORT_2026-02-11.md
docs/plans/: 2026-02-09-barnstormer-implementation.md  2026-02-09-chat-input-provider-status-agents.md  2026-02-09-specd-implementation.md  2026-04-16-streaming-design.md  2026-04-16-streaming-implementation.md  2026-04-16-ux-fixes-implementation.md  2026-04-17-phase-wayfinding-design.md  2026-04-17-phase-wayfinding-implementation.md  2026-04-20-mobile-ui-cleanup-design.md  2026-04-20-mobile-ui-cleanup-implementation.md  2026-04-21-brainstorming-context-files-design.md  2026-04-21-brainstorming-context-files-plan.md  2026-04-24-brainstorming-ia-redesign.md  2026-05-07-multimodal-context-files-design.md  2026-05-07-multimodal-context-files-plan.md  2026-05-08-tauri-release-signing-design.md  2026-05-08-tauri-wrapper-design.md  2026-05-08-tauri-wrapper.md
docs/superpowers/plans/: 2026-03-19-brainstorming-ui.md  2026-03-19-manager-intelligence.md  2026-03-19-phase-model.md  2026-03-19-spec-view-replaces-diagram.md
docs/superpowers/specs/: 2026-03-19-brainstorming-ui-design.md  2026-03-19-manager-intelligence-design.md  2026-03-19-phase-model-design.md
src/: main.rs
static/: board.js  style.css
templates/: base.html  index.html  spec_page.html
templates/partials/: activity.html  activity_transcript.html  agent_canvas.html  agent_leds.html  agent_status.html  artifacts.html  board.html  card.html  card_form.html  cards_feed.html  chat_feed.html  chat_panel.html  chat_question.html  chat_transcript.html  context_panel.html  create_spec_form.html  diagram.html  document.html  import_spec_form.html  mission_ticker.html  phase_stepper.html  provider_status.html  spec.html  spec_list.html  spec_view.html
tests/: smoke.rs
