[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
axum-core = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
askama = "0.14"
askama-derive-axum = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
async-trait = "0.1"
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
mux = { path = "../mux-rs" }

specd-core = { path = "crates/specd-core" }
specd-store = { path = "crates/specd-store" }
specd-server = { path = "crates/specd-server" }
specd-agent = { path = "crates/specd-agent" }

[package]
name = "specd"
edition.workspace = true
version.workspace = true

[[bin]]
name = "specd"
path = "src/main.rs"

[dependencies]
specd-core.workspace = true
specd-store.workspace = true
specd-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
ulid.workspace = true
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
http = { workspace = true }
tower = { workspace = true, features = ["util"] }
