[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
axum-core = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
askama = { version = "0.14", features = ["serde_json"] }
askama-derive-axum = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }
async-trait = "0.1"
serde_yaml = "0.9"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
http = "1"
pulldown-cmark = "0.12"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
mux = { path = "../mux-rs" }

barnstormer-core = { path = "crates/barnstormer-core" }
barnstormer-store = { path = "crates/barnstormer-store" }
barnstormer-server = { path = "crates/barnstormer-server" }
barnstormer-agent = { path = "crates/barnstormer-agent" }

[package]
name = "barnstormer"
edition.workspace = true
version.workspace = true

[[bin]]
name = "barnstormer"
path = "src/main.rs"

[dependencies]
barnstormer-core.workspace = true
barnstormer-store.workspace = true
barnstormer-server.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
ulid.workspace = true
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
http = { workspace = true }
tower = { workspace = true, features = ["util"] }
