[package]
name = "barnstormer-agent"
description = "AI agent runtime, LLM provider adapters, and swarm orchestrator for barnstormer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
live-test = []

[dependencies]
barnstormer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
chrono.workspace = true
mux.workspace = true
anyhow.workspace = true
futures.workspace = true
