[package]
name = "barnstormer-core"
description = "Domain types, commands, events, state reducer, and exporters for barnstormer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
