[package]
name = "barnstormer-runtime"
description = "Shared runtime startup and lifecycle for barnstormer frontends"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
barnstormer-core.workspace = true
barnstormer-server.workspace = true
barnstormer-store.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tempfile = "3"
