[package]
name = "barnstormer-store"
edition.workspace = true
version.workspace = true

[dependencies]
barnstormer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rusqlite.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
ulid.workspace = true
