[package]
name = "barnstormer-store"
description = "Persistence layer for barnstormer — JSONL event log, snapshots, SQLite index, crash recovery"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
barnstormer-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
rusqlite.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
ulid.workspace = true
