[package]
name = "barnstormer-tauri"
description = "macOS desktop wrapper for barnstormer"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "barnstormer_tauri"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
barnstormer-runtime.workspace = true
barnstormer-server.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
