[package]
name = "specd-agent"
edition.workspace = true
version.workspace = true

[dependencies]
specd-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
ulid.workspace = true
chrono.workspace = true
