[package]
name = "specd-server"
edition.workspace = true
version.workspace = true

[dependencies]
specd-core.workspace = true
specd-store.workspace = true
specd-agent.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
askama.workspace = true
askama-derive-axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
